# Open-Tag-Reader

./: .gitignore  OTR_AMOLED_UIBACKUP.sll  OTR_AMOLED_UIBACKUP.spj  OTR_AMOLED_UIBACKUP_events.py  README.md  roadmap  roadmap.md
3d_print_files/: Coil reader - Shroud.3mf  Coil reader.3mf
Code/: info.md
RFID Modules/: readme.md
Roadmap/: Roadmap.md
T-Display S3 AMOLED Touch/: Info.md
build_instructions/: build_instructions.md
t-display-AMOLED/OTR-T-Display-AMOLED/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
t-display-AMOLED/OTR-T-Display-AMOLED/src/ui/components/: ui_comp_hook.c
t-display-AMOLED/OTR-T-Display-AMOLED/src/ui/images/: ui_img_add_circle_png.c  ui_img_arrow_back_png.c  ui_img_battery_1_bar_png.c  ui_img_battery_2_bar_png.c  ui_img_battery_3_bar_png.c  ui_img_battery_4_bar_png.c  ui_img_battery_5_bar_png.c  ui_img_battery_alert_png.c  ui_img_battery_charging_full_png.c  ui_img_battery_full_png.c  ui_img_bluetooth_disabled_png.c  ui_img_bluetooth_png.c  ui_img_cancel_png.c  ui_img_contactless_off_png.c  ui_img_contactless_png.c  ui_img_sd_card_png.c  ui_img_settings_png.c  ui_img_volume_down_png.c  ui_img_volume_off_png.c  ui_img_volume_up_png.c  ui_img_wifi_off_png.c  ui_img_wifi_png.c  ui_img_wifi_tethering_off_png.c  ui_img_wifi_tethering_png.c
t-display-AMOLED/OTR-T-Display-AMOLED/src/ui/screens/: ui_Main.c  ui_New.c  ui_Records.c  ui_Scan.c  ui_SetDate.c  ui_SetTime.c  ui_Settings.c  ui_Time.c
t-embed/: SquareLine_Project_OTR_UI.sll  SquareLine_Project_OTR_UI.spj
(+132 files in other folders)
